--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^6.3.5"
     },
     "dependencies": {
+        "@shadcn/ui": "^0.0.4",
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
     }
