--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
         "laravel-vite-plugin": "^1.3.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.11",
+        "tw-animate-css": "^1.3.5",
         "vite": "^6.3.5"
     },
     "dependencies": {
+        "@radix-ui/react-slot": "^1.2.3",
         "@shadcn/ui": "^0.0.4",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.525.0",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "tailwind-merge": "^3.3.1"
     }
 }
