--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vite": "^6.3.5"
     },
     "dependencies": {
+        "@radix-ui/react-checkbox": "^1.3.2",
+        "@radix-ui/react-select": "^2.2.5",
         "@radix-ui/react-slot": "^1.2.3",
         "@shadcn/ui": "^0.0.4",
         "class-variance-authority": "^0.7.1",
