--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
     "compilerOptions": {
-        "baseUrl": "./",
+        "jsx": "react-jsx",
+        "module": "ESNext",
+        "target": "ESNext",
+        "moduleResolution": "Node",
+        "baseUrl": ".",
         "paths": {
             "@/*": ["resources/js/*"]
         }
