--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^6.3.5"
     },
     "dependencies": {
+        "@inertiajs/inertia-react": "^0.8.1",
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-select": "^2.2.5",
         "@radix-ui/react-slot": "^1.2.3",
@@ -26,8 +27,8 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.525.0",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "tailwind-merge": "^3.3.1"
     }
 }
