--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,5 @@ services:
             - '.:/application'
             - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.4/fpm/conf.d/99-overrides.ini'
             - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.4/cli/conf.d/99-overrides.ini'
+        ports:
+        - 5173:5173
