--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "lucide-react": "^0.525.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "tailwind-merge": "^3.3.1"
+        "react-tag-autocomplete": "^7.5.0",
+        "tailwind-merge": "^3.3.1",
+        "ziggy-js": "^1.0.5"
     }
 }
