--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vite": "^6.3.5"
     },
     "dependencies": {
+        "@coltorapps/builder": "^0.2.4",
+        "@coltorapps/builder-react": "^0.2.4",
         "@inertiajs/inertia-react": "^0.8.1",
         "@radix-ui/react-accordion": "^1.2.11",
         "@radix-ui/react-checkbox": "^1.3.2",
