--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dependencies": {
         "@coltorapps/builder": "^0.2.4",
         "@coltorapps/builder-react": "^0.2.4",
-        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/react": "^2.0.17",
         "@radix-ui/react-accordion": "^1.2.11",
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-label": "^2.1.7",
@@ -34,8 +34,8 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.525.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-select": "^5.10.2",
         "react-tag-autocomplete": "^7.5.0",
         "tailwind-merge": "^3.3.1",
