--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-select": "^5.10.2",
         "react-tag-autocomplete": "^7.5.0",
         "tailwind-merge": "^3.3.1",
-        "ziggy-js": "^1.0.5"
+        "ziggy-js": "^1.0.5",
+        "zod": "^4.0.14"
     }
 }
