--- a/phpdocker/php-fpm/Dockerfile
+++ b/phpdocker/php-fpm/Dockerfile
@@ -1,13 +1,24 @@
 FROM phpdockerio/php:8.4-fpm
-WORKDIR "/application"
 
-RUN apt-get update \
-    && apt-get -y --no-install-recommends install \
-        git \
-        php8.4-mysql \
-        php8.4-pgsql \
-        php8.4-intl \
-        nodejs \
-        npm \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+WORKDIR /application
+
+# Update system and install dependencies for Node.js setup
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl \
+    gnupg \
+    && curl -fsSL https://deb.nodesource.com/setup_22.x | bash -
+
+# Install PHP extensions and Node.js 20
+RUN apt-get install -y --no-install-recommends \
+    git \
+    php8.4-mysql \
+    php8.4-pgsql \
+    php8.4-intl \
+    nodejs
+
+# Clean up to reduce image size
+RUN apt-get clean && rm -rf \
+    /var/lib/apt/lists/* \
+    /tmp/* \
+    /var/tmp/* \
+    /usr/share/doc/*
