--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@coltorapps/builder-react": "^0.2.4",
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
+        "@hookform/resolvers": "^5.2.1",
         "@inertiajs/react": "^2.0.17",
         "@radix-ui/react-accordion": "^1.2.11",
         "@radix-ui/react-checkbox": "^1.3.2",
@@ -39,6 +40,7 @@
         "lucide-react": "^0.525.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "react-hook-form": "^7.62.0",
         "react-select": "^5.10.2",
         "react-tag-autocomplete": "^7.5.0",
         "tailwind-merge": "^3.3.1",
