--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,32 +3,32 @@
 ###############################################################################
 services:
     postgres:
-        image: 'postgres:15-alpine'
+        image: "postgres:15-alpine"
         working_dir: /application
         volumes:
-            - '.:/application'
+            - ".:/application"
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=psql
             - POSTGRES_DB=printing_shop_db
         ports:
-            - '27004:5432'
+            - "27004:5432"
 
     webserver:
-        image: 'nginx:alpine'
+        image: "nginx:alpine"
         working_dir: /application
         volumes:
-            - '.:/application'
-            - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
+            - ".:/application"
+            - "./phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
         ports:
-            - '80:80'
+            - "80:80"
 
     php-fpm:
         build: phpdocker/php-fpm
         working_dir: /application
         volumes:
-            - '.:/application'
-            - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.4/fpm/conf.d/99-overrides.ini'
-            - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.4/cli/conf.d/99-overrides.ini'
+            - ".:/application"
+            - "./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.4/fpm/conf.d/99-overrides.ini"
+            - "./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.4/cli/conf.d/99-overrides.ini"
         ports:
-        - 5173:5173
+            - "5173:5173"
