--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-###############################################################################
-#                          Generated on phpdocker.io                          #
-###############################################################################
 services:
     postgres:
         image: "postgres:15-alpine"
@@ -13,6 +10,15 @@ services:
             - POSTGRES_DB=printing_shop_db
         ports:
             - "27004:5432"
+        healthcheck:
+            test:
+                [
+                    "CMD-SHELL",
+                    "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} -h 127.0.0.1 -p 5432",
+                ]
+            interval: 3s
+            timeout: 3s
+            retries: 20
 
     webserver:
         image: "nginx:alpine"
@@ -22,6 +28,15 @@ services:
             - "./phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
         ports:
             - "80:80"
+        healthcheck:
+            test:
+                [
+                    "CMD-SHELL",
+                    "wget -qO- http://127.0.0.1/ >/dev/null 2>&1 || exit 1",
+                ]
+            interval: 5s
+            timeout: 3s
+            retries: 20
 
     php-fpm:
         build: phpdocker/php-fpm
@@ -32,3 +47,13 @@ services:
             - "./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.4/cli/conf.d/99-overrides.ini"
         ports:
             - "5173:5173"
+        healthcheck:
+            # Checks PHP-FPM is up (port 5173) and PHP CLI is usable
+            test:
+                [
+                    "CMD-SHELL",
+                    "php -v >/dev/null 2>&1 && (nc -z 127.0.0.1 5173 || ss -ltn | grep -q ':5173')",
+                ]
+            interval: 5s
+            timeout: 3s
+            retries: 30
