--- a/package.json
+++ b/package.json
@@ -42,10 +42,15 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel-react": "^8.6.0",
+        "i18next": "^25.4.2",
+        "i18next-browser-languagedetector": "^8.2.0",
+        "i18next-http-backend": "^3.0.2",
+        "i18next-icu": "^2.4.0",
         "lucide-react": "^0.525.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-hook-form": "^7.62.0",
+        "react-i18next": "^15.7.2",
         "react-select": "^5.10.2",
         "react-tag-autocomplete": "^7.5.0",
         "tailwind-merge": "^3.3.1",
