fix: update locale settings in .env.example to support French and Arabic

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,10 @@ APP_URL=http://localhost
 
 VITE_WHATSAPP_PHONE_NUMBER=0612345678
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
+APP_LOCALE=fr
+APP_FALLBACK_LOCALE=fr
+APP_AVAILABLE_LOCALES=fr,ar
+APP_RTL_LOCALES=ar
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
