add: update .env.example with VITE locale variables for internationalization

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_APP_LOCALE="${APP_LOCALE}"
+VITE_APP_FALLBACK_LOCALE="${APP_FALLBACK_LOCALE}"
+VITE_APP_AVAILABLE_LOCALES="${APP_AVAILABLE_LOCALES}"
+VITE_APP_RTL_LOCALES="${APP_RTL_LOCALES}"
