--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "i18next-browser-languagedetector": "^8.2.0",
         "i18next-http-backend": "^3.0.2",
         "i18next-icu": "^2.4.0",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.525.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
