--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "spatie/laravel-backup": "^9.3",
         "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-translatable": "^6.11",
-        "tightenco/ziggy": "^2.5"
+        "tightenco/ziggy": "^2.5",
+        "wnx/laravel-backup-restore": "^1.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
