composer require cyrildewit/eloquent-viewable

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "cyrildewit/eloquent-viewable": "^7.0",
         "filament/filament": "^3.3",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "hardikkhorasiya09/change-password": "^1.0",
