--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "@radix-ui/react-accordion": "^1.2.11",
         "@radix-ui/react-aspect-ratio": "^1.1.7",
         "@radix-ui/react-checkbox": "^1.3.2",
-        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-navigation-menu": "^1.2.13",
@@ -56,6 +56,7 @@
         "react-select": "^5.10.2",
         "react-tag-autocomplete": "^7.5.0",
         "tailwind-merge": "^3.3.1",
+        "vaul": "^1.1.2",
         "ziggy-js": "^1.0.5",
         "zod": "^4.0.14"
     }
