add ziggy types

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,8 @@
         "moduleResolution": "Node",
         "baseUrl": ".",
         "paths": {
-            "@/*": ["resources/js/*"]
+            "@/*": ["resources/js/*"],
+            "ziggy-js": ["./vendor/tightenco/ziggy"]
         }
     }
 }
