--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/modifiers": "^9.0.0",
         "@dnd-kit/sortable": "^10.0.0",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
         "@hookform/resolvers": "^5.2.1",
         "@inertiajs/react": "^2.0.17",
+        "@mui/icons-material": "^7.3.2",
+        "@mui/material": "^7.3.2",
         "@radix-ui/react-accordion": "^1.2.11",
         "@radix-ui/react-aspect-ratio": "^1.1.7",
         "@radix-ui/react-checkbox": "^1.3.2",
