--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "react-i18next": "^15.7.2",
         "react-select": "^5.10.2",
         "react-tag-autocomplete": "^7.5.0",
+        "rooks": "^9.3.0",
         "tailwind-merge": "^3.3.1",
         "vaul": "^1.1.2",
         "ziggy-js": "^1.0.5",
