--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ APP_NAME="Under Print"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://underprint.ma
 
-VITE_WHATSAPP_PHONE_NUMBER=0612345678
+VITE_WHATSAPP_PHONE_NUMBER="212620790346"
 
 APP_LOCALE=fr
 APP_FALLBACK_LOCALE=fr
@@ -24,12 +24,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=postgres
+DB_PORT=5432
+DB_DATABASE=printing_shop_db
+DB_USERNAME=postgres
+DB_PASSWORD=psql
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
