--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "laravel-vite-plugin": "^1.3.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.11",
-        "tw-animate-css": "^1.3.5",
-        "vite": "^6.3.5"
+        "tw-animate-css": "^1.3.5"
     },
     "dependencies": {
         "@coltorapps/builder": "^0.2.4",
@@ -63,6 +62,7 @@
         "tailwind-merge": "^3.3.1",
         "vaul": "^1.1.2",
         "ziggy-js": "^1.0.5",
-        "zod": "^4.0.14"
+        "zod": "^4.0.14",
+        "vite": "^6.3.5"
     }
 }
