--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.3.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.11",
         "tw-animate-css": "^1.3.5"
@@ -63,6 +62,7 @@
         "vaul": "^1.1.2",
         "ziggy-js": "^1.0.5",
         "zod": "^4.0.14",
-        "vite": "^6.3.5"
+        "vite": "^6.3.5",
+        "laravel-vite-plugin": "^1.3.0"
     }
 }
