--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "laravel-vite-plugin": "^1.3.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.11",
-        "tw-animate-css": "^1.3.5"
+        "tw-animate-css": "^1.3.5",
+        "vite": "^6.3.5"
     },
     "dependencies": {
         "@coltorapps/builder": "^0.2.4",
@@ -61,8 +63,6 @@
         "tailwind-merge": "^3.3.1",
         "vaul": "^1.1.2",
         "ziggy-js": "^1.0.5",
-        "zod": "^4.0.14",
-        "vite": "^6.3.5",
-        "laravel-vite-plugin": "^1.3.0"
+        "zod": "^4.0.14"
     }
 }
