--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,18 +21,24 @@ services:
             retries: 20
 
     webserver:
-        image: "nginx:alpine"
+        image: caddy:2-alpine
         working_dir: /application
-        volumes:
-            - ".:/application"
-            - "./phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
         ports:
             - "80:80"
+            - "443:443"
+        volumes:
+            - ./:/application
+            - ./Caddyfile:/etc/caddy/Caddyfile:ro
+            - caddy_data:/data
+            - caddy_config:/config
+        depends_on:
+            - php-fpm
         healthcheck:
+            # Hit a dedicated HTTP /health endpoint that we expose below (no HTTPS, no cert needed)
             test:
                 [
                     "CMD-SHELL",
-                    "wget -qO- http://127.0.0.1/ >/dev/null 2>&1 || exit 1",
+                    "wget -qO- http://127.0.0.1/health >/dev/null 2>&1 || exit 1",
                 ]
             interval: 5s
             timeout: 3s
@@ -58,3 +64,7 @@ services:
             interval: 5s
             timeout: 3s
             retries: 30
+
+volumes:
+    caddy_data:
+    caddy_config:
