--- a/Caddyfile
+++ b/Caddyfile
@@ -1,34 +1,51 @@
 {
-    email {$ACME_EMAIL}
+    email {$ACME_EMAIL}  # public ACME account email for prod
     # debug
 }
 
-# Plain HTTP for healthcheck; everything else redirects to HTTPS on same host
+( serve_php ) {
+    root * /app/public
+
+    php_server
+
+    file_server
+    encode zstd gzip
+}
+
+# 1) HTTP: healthcheck + redirect to HTTPS for all hosts
 :80 {
     @health path /health
     handle @health { respond "ok" 200 }
     redir https://{host}{uri}
 }
 
-# Catch-all HTTPS: issues certs on demand for whatever Host header hits you
+# 2) DEV: trusted HTTPS for localhost only (uses internal CA)
+localhost, 127.0.0.1, ::1 {
+    tls internal                # generates a localhost cert you can trust locally
+
+    serve_php
+    # No HSTS in dev to avoid sticky browser state
+}
+
+# 3) PROD: any real domain that points to this server (public Let's Encrypt)
 :443 {
     tls {
-        on_demand
-        # Optional: prevent random domains from using your ACME quota:
+        on_demand                # issue certs per Host header
+        # Strongly recommended: only allow hosts you own to avoid ACME abuse
+        # Provide an endpoint that returns 200 for allowed hostnames:
         # ask {$ON_DEMAND_ASK}
     }
 
-    root * /app/public
+    serve_php
 
-    # FrankenPHP runs PHP in-process (no php-fpm)
-    php_server
-
-    file_server
-    encode zstd gzip
-
+    # Production-only hardening
     header {
         Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
         X-Content-Type-Options "nosniff"
         Referrer-Policy "no-referrer-when-downgrade"
     }
+
+    # Block hidden files (except ACME)
+    @dotfiles path_regexp /\.(?!well-known)
+    respond @dotfiles 404
 }
