--- a/Caddyfile
+++ b/Caddyfile
@@ -1,51 +1,55 @@
 {
-    email {$ACME_EMAIL}  # public ACME account email for prod
-    # debug
+	# email {$ACME_EMAIL}  # public ACME account email for prod
+	# debug
 }
 
-( serve_php ) {
-    root * /app/public
+(serve_php) {
+	root * /app/public
 
-    php_server
+	php_server
 
-    file_server
-    encode zstd gzip
+	file_server
+	encode zstd gzip
 }
 
 # 1) HTTP: healthcheck + redirect to HTTPS for all hosts
 :80 {
-    @health path /health
-    handle @health { respond "ok" 200 }
-    redir https://{host}{uri}
+	@health path /health
+	handle @health {
+		respond "ok" 200
+	}
+	redir https://{host}{uri}
 }
 
 # 2) DEV: trusted HTTPS for localhost only (uses internal CA)
 localhost, 127.0.0.1, ::1 {
-    tls internal                # generates a localhost cert you can trust locally
+	tls internal # generates a localhost cert you can trust locally
+    
+    # header X-Env dev-local
 
-    serve_php
-    # No HSTS in dev to avoid sticky browser state
+	import serve_php
+	# No HSTS in dev to avoid sticky browser state
 }
 
 # 3) PROD: any real domain that points to this server (public Let's Encrypt)
 :443 {
-    tls {
-        on_demand                # issue certs per Host header
-        # Strongly recommended: only allow hosts you own to avoid ACME abuse
-        # Provide an endpoint that returns 200 for allowed hostnames:
-        # ask {$ON_DEMAND_ASK}
-    }
+	tls {
+		on_demand # issue certs per Host header
+		# Strongly recommended: only allow hosts you own to avoid ACME abuse
+		# Provide an endpoint that returns 200 for allowed hostnames:
+		# ask {$ON_DEMAND_ASK}
+	}
 
-    serve_php
+	import serve_php
 
-    # Production-only hardening
-    header {
-        Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-        X-Content-Type-Options "nosniff"
-        Referrer-Policy "no-referrer-when-downgrade"
-    }
+	# Production-only hardening
+	header {
+		Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+		X-Content-Type-Options "nosniff"
+		Referrer-Policy "no-referrer-when-downgrade"
+	}
 
-    # Block hidden files (except ACME)
-    @dotfiles path_regexp /\.(?!well-known)
-    respond @dotfiles 404
+	# Block hidden files (except ACME)
+	@dotfiles path_regexp /\.(?!well-known)
+	respond @dotfiles 404
 }
