update APP_URL in .env

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="Under Print"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://underprint.ma
+APP_URL=underprint.ma
 
 VITE_WHATSAPP_PHONE_NUMBER="212620790346"
 
