--- a/.env.example
+++ b/.env.example
@@ -24,12 +24,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=postgres
-DB_PORT=5432
-DB_DATABASE=printing_shop_db
-DB_USERNAME=postgres
-DB_PASSWORD=psql
+DB_CONNECTION=sqlite
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
