enable typescript strict mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "paths": {
             "@/*": ["resources/js/*"],
             "ziggy-js": ["./vendor/tightenco/ziggy"]
-        }
+        },
+        "strict": true
     }
 }
