--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
         "jsx": "react-jsx",
         "module": "ESNext",
         "target": "ESNext",
-        "moduleResolution": "Node",
+        "moduleResolution": "bundler",
         "baseUrl": ".",
         "paths": {
             "@/*": ["resources/js/*"],
