--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@types/lodash-es": "^4.17.12",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.6.0",
@@ -51,7 +52,7 @@
         "i18next-browser-languagedetector": "^8.2.0",
         "i18next-http-backend": "^3.0.2",
         "i18next-icu": "^2.4.0",
-        "lodash": "^4.17.21",
+        "lodash-es": "^4.17.21",
         "lucide-react": "^0.525.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
