add english locale

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@ APP_URL=underprint.ma
 
 VITE_WHATSAPP_PHONE_NUMBER="212660630814"
 
-APP_LOCALE=fr
-APP_FALLBACK_LOCALE=fr
-APP_AVAILABLE_LOCALES=fr,ar
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_AVAILABLE_LOCALES=en,fr,ar
 APP_RTL_LOCALES=ar
 APP_FAKER_LOCALE=en_US
 
