make .env.example production by default

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME="Under Print"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=underprint.ma
 
 VITE_WHATSAPP_PHONE_NUMBER="212660630814"
