--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
         "i18next-icu": "^2.4.0",
         "lodash-es": "^4.17.21",
         "lucide-react": "^0.525.0",
+        "mobx": "^6.13.7",
+        "mobx-persist-store": "^1.1.8",
+        "mobx-react-lite": "^4.1.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-hook-form": "^7.62.0",
