--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,6 +8,7 @@
         "paths": {
             "@/*": ["resources/js/*"],
             "ziggy-js": ["./vendor/tightenco/ziggy"]
-        }
+        },
+        "resolveJsonModule": true
     }
 }
