--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "react-tag-autocomplete": "^7.5.0",
         "rooks": "^9.3.0",
         "tailwind-merge": "^3.3.1",
+        "type-fest": "^0.9.0",
         "vaul": "^1.1.2",
         "ziggy-js": "^1.0.5",
         "zod": "^4.0.14"
