--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "spatie/laravel-backup": "^9.3",
         "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-translatable": "^6.11",
