--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 MEDIA_DISK=s3
 
+FILAMENT_FILESYSTEM_DISK=s3
+
 VITE_APP_NAME="${APP_NAME}"
 VITE_APP_LOCALE="${APP_LOCALE}"
 VITE_APP_FALLBACK_LOCALE="${APP_FALLBACK_LOCALE}"
