--- a/.env.example
+++ b/.env.example
@@ -60,7 +60,7 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=fra1
 AWS_BUCKET=underprint
-AWS_ENDPOINT=https://underprint.fra1.digitaloceanspaces.com
+AWS_ENDPOINT=https://fra1.digitaloceanspaces.com
 AWS_URL=https://underprint.fra1.cdn.digitaloceanspaces.com
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
