--- a/.env.example
+++ b/.env.example
@@ -64,9 +64,9 @@ AWS_ENDPOINT=https://fra1.digitaloceanspaces.com
 AWS_URL=https://underprint.fra1.cdn.digitaloceanspaces.com
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-MEDIA_DISK=s3
+MEDIA_DISK=s3_public
 
-FILAMENT_FILESYSTEM_DISK=s3
+FILAMENT_FILESYSTEM_DISK=s3_public
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_APP_LOCALE="${APP_LOCALE}"
